# Winners-Circle-Official-Bot

./: .gitignore  README.md  pyproject.toml  railpack.json  requirements.txt
bot/: __init__.py  bot.py  config.py  google_sheets.py  logging_config.py  main.py  state.py
bot/cogs/: __init__.py  admin.py  members.py  verification.py
